--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -28,4 +28,6 @@
       {% endif %}
     </div>
   {% endfor %}
+   <!-- Подключаем пагинатор -->
+   {% include "includes/paginator.html" %}
 {% endblock %} 
